--- a/DL_ASG2_Q1.ipynb
+++ b/DL_ASG2_Q1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWQ9NAeDoCbvP0JqAdUYW4",
+      "authorship_tag": "ABX9TyNql6QoEEZaupAXXwCNMNSF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Just a simple CNN with 5 layers and Maxpooling built with Pytorch**"
+      ],
+      "metadata": {
+        "id": "vvafP0MRcJJE"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "JepTbILdXIKI"
       },
@@ -79,6 +88,19 @@
         "        x = self.output(x)\n",
         "        return x\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assuming Input Size is 224 x 224 x 3\n",
+        "Assuming m=32 i.e number of filters,\n",
+        "k=3 i.e filter_size\n",
+        "and n=128 i.e number of neurons in flattened layer**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "d7p7uYN9cVmF"
+      }
     },
     {
       "cell_type": "code",
@@ -145,7 +167,7 @@
         "id": "3ymqrQYlXfBW",
         "outputId": "3484d425-fbe9-4550-c40f-3ea77c13b581"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,6 +201,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Calculations as well formula for calculations is specified**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-oID1aUycy6C"
+      }
     },
     {
       "cell_type": "code",
@@ -263,7 +295,7 @@
         "id": "fe0K-C6uZB8v",
         "outputId": "ed3802d9-3564-46eb-e725-eb180a10ee45"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
