--- a/DL_ASG2_Q2_4.ipynb
+++ b/DL_ASG2_Q2_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXfi5AUOE85KqFwLr3AGbY",
+      "authorship_tag": "ABX9TyNMqLKiX3+UZcD6hiXxY7jO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/manasdeshpande125/da6401_assignment2-partA/blob/main/DL_ASG2_Q2_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Impporting Libraries and Setting device for GPU**"
+      ],
+      "metadata": {
+        "id": "j2b8cASBdRMQ"
+      }
     },
     {
       "cell_type": "code",
@@ -53,6 +62,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Wandb Login\n",
         "import wandb\n",
         "!wandb login 41a2853ea088e37bd0d456e78102e82edb455afc"
       ],
@@ -79,9 +89,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Dataset Download**"
+      ],
+      "metadata": {
+        "id": "Haj-JcPIdbGh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Dataset Download\n",
         "!wget https://storage.googleapis.com/wandb_datasets/nature_12K.zip -O nature_12K.zip\n",
         "!unzip -q nature_12K.zip\n",
         "!rm nature_12K.zip"
@@ -93,9 +111,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Load Data Function: Here I have split /train into training and validation**"
+      ],
+      "metadata": {
+        "id": "JX9x4FAOdjNQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Load Data Function\n",
         "def load_data(batch_count, data_aug='n', train_dir='inaturalist_12K/train'):\n",
         "    if data_aug.lower() == 'y':\n",
         "        transform = transforms.Compose([\n",
@@ -145,13 +171,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Building a CNN with 5 layers using Pytorch_Lightning Module**"
+      ],
+      "metadata": {
+        "id": "KWqGtPyAdwCn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import pytorch_lightning as pl\n",
-        "from pytorch_lightning.loggers import WandbLogger\n",
+        "from pytorch_lightning.loggers import WandbLogger  #Used for logging into wandb\n",
         "\n",
         "\n",
         "class LightningNet(pl.LightningModule):\n",
@@ -165,7 +200,7 @@
         "                 use_dropout=True,\n",
         "                 dropout_rate=0.25,\n",
         "                 learning_rate=1e-3,\n",
-        "                 num_classes=10):\n",
+        "                 num_classes=10):   #default parameters\n",
         "\n",
         "        super().__init__()\n",
         "        self.save_hyperparameters()\n",
@@ -253,6 +288,7 @@
         "\n",
         "        return {'test_loss': loss, 'test_acc': acc}\n",
         "\n",
+        "    # Commented out as it was showing some error in newer pytorch_lightning versions\n",
         "    # def test_epoch_end(self, outputs):\n",
         "    #     avg_loss = torch.stack([x['test_loss'] for x in outputs]).mean()\n",
         "    #     avg_acc = torch.stack([x['test_acc'] for x in outputs]).mean()\n",
@@ -348,9 +384,6 @@
         "#     }\n",
         "#     act_fn = activation_map.get(act_str.lower(), nn.ReLU())  # default to ReLU\n",
         "\n",
-        "#     # Initialize model\n",
-        "#     # net = Net((3, 256, 256), filters, 5, act_fn, batch_count,\n",
-        "#     #           batch_norm=batch_norm, drop=drop, drop_value=drop_value).to(device)\n",
         "\n",
         "#     net = LightningNet(\n",
         "#     input_shape=(3, 224, 224),\n",
@@ -406,14 +439,14 @@
         "\n",
         "#         val_acc, val_loss = val_eval(net, device, val_data)\n",
         "\n",
-        "#         # Example wandb logging (uncomment if wandb is initialized)\n",
-        "#         # wandb.log({\n",
-        "#         #     \"epoch\": epoch,\n",
-        "#         #     \"train_loss\": train_avg_loss,\n",
-        "#         #     \"train_acc\": train_acc,\n",
-        "#         #     \"val_loss\": val_loss,\n",
-        "#         #     \"val_acc\": val_acc\n",
-        "#         # })\n",
+        "#         # Example wandb logging\n",
+        "#         wandb.log({\n",
+        "#             \"epoch\": epoch,\n",
+        "#             \"train_loss\": train_avg_loss,\n",
+        "#             \"train_acc\": train_acc,\n",
+        "#             \"val_loss\": val_loss,\n",
+        "#             \"val_acc\": val_acc\n",
+        "#         })\n",
         "\n",
         "#     return train_avg_loss, train_acc, val_acc"
       ],
@@ -446,6 +479,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Function to calculate loss and Accuracy**"
+      ],
+      "metadata": {
+        "id": "y6snZMRFexdj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def val_eval_lightning(model, val_loader):\n",
@@ -475,6 +517,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Function which creates model for LightningNet class and trains it**"
+      ],
+      "metadata": {
+        "id": "83qsjzHHe1kj"
+      }
     },
     {
       "cell_type": "code",
@@ -597,6 +648,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Specifying the Sweep Configuration**"
+      ],
+      "metadata": {
+        "id": "pFkur4ZnfEFJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sweep_configuration = {\n",
@@ -649,6 +709,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Function to call train and test function based on config parameters with early stopping**"
+      ],
+      "metadata": {
+        "id": "fu8QJPlZfJVl"
+      }
     },
     {
       "cell_type": "code",
@@ -737,6 +806,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Sweep Function**"
+      ],
+      "metadata": {
+        "id": "JSynAKbefULS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import wandb\n",
@@ -786,6 +864,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**To calculate top 3 sweep configurations for validation accuracy**"
+      ],
+      "metadata": {
+        "id": "Dz_8pEVsfXV5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "entity = 'cs24m024-iit-madras'\n",
@@ -825,6 +912,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Testing on top 3 accuracies of model and showing predictions in grid of images**"
+      ],
+      "metadata": {
+        "id": "TjqjwQxLffUx"
+      }
     },
     {
       "cell_type": "code",
@@ -897,12 +993,12 @@
         "model1 = train_CNN_lightning(\n",
         "    epochs=20,\n",
         "    filter_mode=\"inc_dec\",\n",
-        "    act_str=\"GELU\",\n",
-        "    batch_count=32,\n",
+        "    act_str=\"RELU\",\n",
+        "    batch_count=64,\n",
         "    data_aug='y',\n",
         "    batch_norm='y',\n",
         "    drop='n',\n",
-        "    optimizer_name=\"nesterov\",\n",
+        "    optimizer_name=\"adam\",\n",
         "    lr_rate=0.001,\n",
         "    drop_value=0.2,\n",
         "    kernel_sizes=[3, 3, 3, 3, 3],\n",
@@ -955,6 +1051,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Plotting Confusion Matrix**"
+      ],
+      "metadata": {
+        "id": "ICxWWjJNfkPX"
+      }
     },
     {
       "cell_type": "code",
